Add new paragraph

--- a/new.html
+++ b/new.html
@@ -1,2 +1,4 @@
 <H1>My HTML Code</H1>
 <p>This is a New Repo.</p>
+<!-- this is checking for new branch name : Master-->
+<p>this is for new master branch</p>
